Lab1/Code/syntax.output
State 23 conflicts: 1 shift/reduce
State 28 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: ID
   14       | ε

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB
   18       | VarDec LB error RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | ID LP error RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC
   26       | LC error DefList StmtList RC
   27       | LC DefList StmtList error StmtList RC

   28 StmtList: Stmt StmtList
   29         | ε

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | WHILE error RC
   37     | WHILE LP Exp RP error SEMI

   38 DefList: Def DefList
   39        | ε
   40        | error SEMI

   41 Def: Specifier DecList SEMI
   42    | Specifier error SEMI

   43 DecList: Dec
   44        | Dec COMMA DecList

   45 Dec: VarDec
   46    | VarDec ASSIGNOP Exp

   47 Exp: Exp ASSIGNOP Exp
   48    | Exp AND Exp
   49    | Exp OR Exp
   50    | Exp RELOP Exp
   51    | Exp PLUS Exp
   52    | Exp MINUS Exp
   53    | Exp STAR Exp
   54    | Exp DIV Exp
   55    | LP Exp RP
   56    | MINUS Exp
   57    | NOT Exp
   58    | ID LP Args RP
   59    | ID LP RP
   60    | Exp LB Exp RB
   61    | Exp DOT ID
   62    | ID
   63    | INT
   64    | FLOAT
   65    | Exp ASSIGNOP error
   66    | Exp AND error
   67    | Exp OR error
   68    | Exp RELOP error
   69    | Exp PLUS error
   70    | Exp MINUS error
   71    | Exp STAR error
   72    | Exp DIV error
   73    | MINUS error
   74    | NOT error
   75    | LP error RP
   76    | ID LP error RP
   77    | ID LP error SEMI
   78    | Exp LB error RB

   79 Args: Exp COMMA Args
   80     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 18 21 26 27 36 37 40 42 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    INT <node> (258) 17 63
    FLOAT <node> (259) 64
    ID <node> (260) 13 15 16 19 20 21 58 59 61 62 76 77
    PLUS <node> (261) 51 69
    MINUS <node> (262) 52 56 70 73
    STAR <node> (263) 53 71
    DIV <node> (264) 54 72
    ASSIGNOP <node> (265) 46 47 65
    RELOP <node> (266) 50 68
    RETURN <node> (267) 32
    TYPE <node> (268) 9
    STRUCT <node> (269) 11 12
    LP <node> (270) 19 20 21 33 34 35 37 55 58 59 75 76 77
    LB <node> (271) 17 18 60 78
    LC <node> (272) 11 25 26 27
    RP <node> (273) 19 20 21 33 34 35 37 55 58 59 75 76
    RB <node> (274) 17 18 60 78
    RC <node> (275) 11 25 26 27 36
    IF <node> (276) 33 34
    ELSE <node> (277) 34
    WHILE <node> (278) 35 36 37
    COMMA <node> (279) 8 22 44 79
    SEMI <node> (280) 4 5 30 32 37 40 41 42 77
    DOT <node> (281) 61
    AND <node> (282) 48 66
    OR <node> (283) 49 67
    NOT <node> (284) 57 74
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <node> (32)
        on left: 1
        on right: 0
    ExtDefList <node> (33)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (34)
        on left: 4 5 6
        on right: 2
    ExtDecList <node> (35)
        on left: 7 8
        on right: 4 8
    Specifier <node> (36)
        on left: 9 10
        on right: 4 5 6 24 41 42
    StructSpecifier <node> (37)
        on left: 11 12
        on right: 10
    OptTag <node> (38)
        on left: 13 14
        on right: 11
    Tag <node> (39)
        on left: 15
        on right: 12
    VarDec <node> (40)
        on left: 16 17 18
        on right: 7 8 17 18 24 45 46
    FunDec <node> (41)
        on left: 19 20 21
        on right: 6
    VarList <node> (42)
        on left: 22 23
        on right: 19 22
    ParamDec <node> (43)
        on left: 24
        on right: 22 23
    CompSt <node> (44)
        on left: 25 26 27
        on right: 6 31
    StmtList <node> (45)
        on left: 28 29
        on right: 25 26 27 28
    Stmt <node> (46)
        on left: 30 31 32 33 34 35 36 37
        on right: 28 33 34 35
    DefList <node> (47)
        on left: 38 39 40
        on right: 11 25 26 27 38
    Def <node> (48)
        on left: 41 42
        on right: 38
    DecList <node> (49)
        on left: 43 44
        on right: 41 44
    Dec <node> (50)
        on left: 45 46
        on right: 43 44
    Exp <node> (51)
        on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
        on right: 30 32 33 34 35 37 46 47 48 49 50 51 52 53 54 55 56 57 60 61 65 66 67 68 69 70 71 72 78 79 80
    Args <node> (52)
        on left: 79 80
        on right: 58 79


State 0

    0 $accept: • Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

    9 Specifier: TYPE •

    $default  reduce using rule 9 (Specifier)


State 2

   11 StructSpecifier: STRUCT • OptTag LC DefList RC
   12                | STRUCT • Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program • $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef • ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


State 7

   10 Specifier: StructSpecifier •

    $default  reduce using rule 10 (Specifier)


State 8

   13 OptTag: ID •
   15 Tag: ID •

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 15 (Tag)


State 9

   11 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 18


State 10

   12 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 12 (StructSpecifier)


State 11

    0 $accept: Program $end •

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 13

   16 VarDec: ID •
   19 FunDec: ID • LP VarList RP
   20       | ID • LP RP
   21       | ID • LP error RP

    LP  shift, and go to state 19

    $default  reduce using rule 16 (VarDec)


State 14

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 20


State 16

    7 ExtDecList: VarDec •
    8           | VarDec • COMMA ExtDecList
   17 VarDec: VarDec • LB INT RB
   18       | VarDec • LB error RB

    LB     shift, and go to state 21
    COMMA  shift, and go to state 22

    $default  reduce using rule 7 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec • CompSt

    LC  shift, and go to state 23

    CompSt  go to state 24


State 18

   11 StructSpecifier: STRUCT OptTag LC • DefList RC

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 39 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 27
    Def              go to state 28


State 19

   19 FunDec: ID LP • VarList RP
   20       | ID LP • RP
   21       | ID LP • error RP

    error   shift, and go to state 29
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    RP      shift, and go to state 30

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 32
    ParamDec         go to state 33


State 20

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 21

   17 VarDec: VarDec LB • INT RB
   18       | VarDec LB • error RB

    error  shift, and go to state 34
    INT    shift, and go to state 35


State 22

    8 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 36

    ExtDecList  go to state 37
    VarDec      go to state 16


State 23

   25 CompSt: LC • DefList StmtList RC
   26       | LC • error DefList StmtList RC
   27       | LC • DefList StmtList error StmtList RC

    error   shift, and go to state 38
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 39 (DefList)]
    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 39
    Def              go to state 28


State 24

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 25

   40 DefList: error • SEMI

    SEMI  shift, and go to state 40


State 26

   41 Def: Specifier • DecList SEMI
   42    | Specifier • error SEMI

    error  shift, and go to state 41
    ID     shift, and go to state 36

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 27

   11 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 45


State 28

   38 DefList: Def • DefList

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 39 (DefList)]
    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 46
    Def              go to state 28


State 29

   21 FunDec: ID LP error • RP

    RP  shift, and go to state 47


State 30

   20 FunDec: ID LP RP •

    $default  reduce using rule 20 (FunDec)


State 31

   24 ParamDec: Specifier • VarDec

    ID  shift, and go to state 36

    VarDec  go to state 48


State 32

   19 FunDec: ID LP VarList • RP

    RP  shift, and go to state 49


State 33

   22 VarList: ParamDec • COMMA VarList
   23        | ParamDec •

    COMMA  shift, and go to state 50

    $default  reduce using rule 23 (VarList)


State 34

   18 VarDec: VarDec LB error • RB

    RB  shift, and go to state 51


State 35

   17 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 52


State 36

   16 VarDec: ID •

    $default  reduce using rule 16 (VarDec)


State 37

    8 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 8 (ExtDecList)


State 38

   26 CompSt: LC error • DefList StmtList RC
   40 DefList: error • SEMI

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    SEMI    shift, and go to state 40

    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 53
    Def              go to state 28


State 39

   25 CompSt: LC DefList • StmtList RC
   27       | LC DefList • StmtList error StmtList RC

    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    RETURN  shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 23
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61
    NOT     shift, and go to state 62

    $default  reduce using rule 29 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 64
    Stmt      go to state 65
    Exp       go to state 66


State 40

   40 DefList: error SEMI •

    $default  reduce using rule 40 (DefList)


State 41

   42 Def: Specifier error • SEMI

    SEMI  shift, and go to state 67


State 42

   17 VarDec: VarDec • LB INT RB
   18       | VarDec • LB error RB
   45 Dec: VarDec •
   46    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 68
    LB        shift, and go to state 21

    $default  reduce using rule 45 (Dec)


State 43

   41 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 69


State 44

   43 DecList: Dec •
   44        | Dec • COMMA DecList

    COMMA  shift, and go to state 70

    $default  reduce using rule 43 (DecList)


State 45

   11 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 11 (StructSpecifier)


State 46

   38 DefList: Def DefList •

    $default  reduce using rule 38 (DefList)


State 47

   21 FunDec: ID LP error RP •

    $default  reduce using rule 21 (FunDec)


State 48

   17 VarDec: VarDec • LB INT RB
   18       | VarDec • LB error RB
   24 ParamDec: Specifier VarDec •

    LB  shift, and go to state 21

    $default  reduce using rule 24 (ParamDec)


State 49

   19 FunDec: ID LP VarList RP •

    $default  reduce using rule 19 (FunDec)


State 50

   22 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 71
    ParamDec         go to state 33


State 51

   18 VarDec: VarDec LB error RB •

    $default  reduce using rule 18 (VarDec)


State 52

   17 VarDec: VarDec LB INT RB •

    $default  reduce using rule 17 (VarDec)


State 53

   26 CompSt: LC error DefList • StmtList RC

    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    RETURN  shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 23
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61
    NOT     shift, and go to state 62

    $default  reduce using rule 29 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 72
    Stmt      go to state 65
    Exp       go to state 66


State 54

   63 Exp: INT •

    $default  reduce using rule 63 (Exp)


State 55

   64 Exp: FLOAT •

    $default  reduce using rule 64 (Exp)


State 56

   58 Exp: ID • LP Args RP
   59    | ID • LP RP
   62    | ID •
   76    | ID • LP error RP
   77    | ID • LP error SEMI

    LP  shift, and go to state 73

    $default  reduce using rule 62 (Exp)


State 57

   56 Exp: MINUS • Exp
   73    | MINUS • error

    error  shift, and go to state 74
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    LP     shift, and go to state 59
    NOT    shift, and go to state 62

    Exp  go to state 75


State 58

   32 Stmt: RETURN • Exp SEMI

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    LP     shift, and go to state 59
    NOT    shift, and go to state 62

    Exp  go to state 76


State 59

   55 Exp: LP • Exp RP
   75    | LP • error RP

    error  shift, and go to state 77
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    LP     shift, and go to state 59
    NOT    shift, and go to state 62

    Exp  go to state 78


State 60

   33 Stmt: IF • LP Exp RP Stmt
   34     | IF • LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 79


State 61

   35 Stmt: WHILE • LP Exp RP Stmt
   36     | WHILE • error RC
   37     | WHILE • LP Exp RP error SEMI

    error  shift, and go to state 80
    LP     shift, and go to state 81


State 62

   57 Exp: NOT • Exp
   74    | NOT • error

    error  shift, and go to state 82
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    LP     shift, and go to state 59
    NOT    shift, and go to state 62

    Exp  go to state 83


State 63

   31 Stmt: CompSt •

    $default  reduce using rule 31 (Stmt)


State 64

   25 CompSt: LC DefList StmtList • RC
   27       | LC DefList StmtList • error StmtList RC

    error  shift, and go to state 84
    RC     shift, and go to state 85


State 65

   28 StmtList: Stmt • StmtList

    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    RETURN  shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 23
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61
    NOT     shift, and go to state 62

    $default  reduce using rule 29 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 86
    Stmt      go to state 65
    Exp       go to state 66


State 66

   30 Stmt: Exp • SEMI
   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   52    | Exp • MINUS Exp
   53    | Exp • STAR Exp
   54    | Exp • DIV Exp
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID
   65    | Exp • ASSIGNOP error
   66    | Exp • AND error
   67    | Exp • OR error
   68    | Exp • RELOP error
   69    | Exp • PLUS error
   70    | Exp • MINUS error
   71    | Exp • STAR error
   72    | Exp • DIV error
   78    | Exp • LB error RB

    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    ASSIGNOP  shift, and go to state 91
    RELOP     shift, and go to state 92
    LB        shift, and go to state 93
    SEMI      shift, and go to state 94
    DOT       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97


State 67

   42 Def: Specifier error SEMI •

    $default  reduce using rule 42 (Def)


State 68

   46 Dec: VarDec ASSIGNOP • Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    LP     shift, and go to state 59
    NOT    shift, and go to state 62

    Exp  go to state 98


State 69

   41 Def: Specifier DecList SEMI •

    $default  reduce using rule 41 (Def)


State 70

   44 DecList: Dec COMMA • DecList

    ID  shift, and go to state 36

    VarDec   go to state 42
    DecList  go to state 99
    Dec      go to state 44


State 71

   22 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 22 (VarList)


State 72

   26 CompSt: LC error DefList StmtList • RC

    RC  shift, and go to state 100


State 73

   58 Exp: ID LP • Args RP
   59    | ID LP • RP
   76    | ID LP • error RP
   77    | ID LP • error SEMI

    error  shift, and go to state 101
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    LP     shift, and go to state 59
    RP     shift, and go to state 102
    NOT    shift, and go to state 62

    Exp   go to state 103
    Args  go to state 104


State 74

   73 Exp: MINUS error •

    $default  reduce using rule 73 (Exp)


State 75

   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   52    | Exp • MINUS Exp
   53    | Exp • STAR Exp
   54    | Exp • DIV Exp
   56    | MINUS Exp •
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID
   65    | Exp • ASSIGNOP error
   66    | Exp • AND error
   67    | Exp • OR error
   68    | Exp • RELOP error
   69    | Exp • PLUS error
   70    | Exp • MINUS error
   71    | Exp • STAR error
   72    | Exp • DIV error
   78    | Exp • LB error RB

    STAR  shift, and go to state 89
    DIV   shift, and go to state 90
    LB    shift, and go to state 93
    DOT   shift, and go to state 95

    $default  reduce using rule 56 (Exp)


State 76

   32 Stmt: RETURN Exp • SEMI
   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   52    | Exp • MINUS Exp
   53    | Exp • STAR Exp
   54    | Exp • DIV Exp
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID
   65    | Exp • ASSIGNOP error
   66    | Exp • AND error
   67    | Exp • OR error
   68    | Exp • RELOP error
   69    | Exp • PLUS error
   70    | Exp • MINUS error
   71    | Exp • STAR error
   72    | Exp • DIV error
   78    | Exp • LB error RB

    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    ASSIGNOP  shift, and go to state 91
    RELOP     shift, and go to state 92
    LB        shift, and go to state 93
    SEMI      shift, and go to state 105
    DOT       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97


State 77

   75 Exp: LP error • RP

    RP  shift, and go to state 106


State 78
